# journal

./: LICENSE  journal.cabal
app/: AI.hs  AcademicData.hs  Grade.hs  Main.hs
journal/: bonus-latest.data  exam-28.06.2025-51604535879476000.data  exam-28.06.2025-78519212769478000.data  exam-latest.data  problems.data  solutions-28.06.2025-78519212769478000.data  solutions-latest.data  students.data
